<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_light_with_radius"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView4"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/dul_shapka"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/dul_obyasnenie"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/heavy_clouds" />

    <TextView
        android:id="@+id/tv_on_permission_location"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/dul_razreshit" />

</LinearLayout>