<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/layout_margin_horiontal"
        android:layout_marginTop="@dimen/layout_marging_vertical"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/corner_radius">

        <org.osmdroid.views.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/bt_update_location"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:padding="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/background_light_with_radius"
            app:srcCompat="@drawable/ic_update_location" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:theme="@style/round_progres_bar_on_dark_background"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_alarm"
            style="@style/tv_alarm"
            android:layout_width="@dimen/tv_alarm_width"
            android:layout_height="wrap_content"
            android:text="@string/fm_no_date"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_item_height"
        android:layout_marginHorizontal="@dimen/layout_margin_horiontal"
        android:layout_marginTop="@dimen/layout_marging_vertical"
        android:background="@drawable/background_with_radius_and_obvodka">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fm_tab_item_icon" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fm_tab_item_name" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_margin_horiontal"
        android:layout_marginVertical="@dimen/layout_marging_vertical"
        app:cardCornerRadius="@dimen/corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_data_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_with_radius_and_obvodka">

            <TextView
                android:id="@+id/map_data_name"
                style="@style/text_zagolovok_big_na_svetlom_fone"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/background_dark"
                android:gravity="center"
                android:textColor="@color/snow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/map_data_lat"
                style="@style/text_osnovnie_danie_na_svetlom_fone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/fm_latitude_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_data_name" />

            <TextView
                android:id="@+id/map_data_lon"
                style="@style/text_osnovnie_danie_na_svetlom_fone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fm_longitude_default"
                app:layout_constraintBottom_toTopOf="@+id/map_data_vel"
                app:layout_constraintStart_toStartOf="@+id/map_data_lat"
                app:layout_constraintTop_toBottomOf="@+id/map_data_lat" />

            <TextView
                android:id="@+id/map_data_alt"
                style="@style/text_osnovnie_danie_na_svetlom_fone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/fm_altitude_default"
                app:layout_constraintBaseline_toBaselineOf="@+id/map_data_lat"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <TextView
                android:id="@+id/map_data_dst"
                style="@style/text_osnovnie_danie_na_svetlom_fone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fm_range_default"
                app:layout_constraintBaseline_toBaselineOf="@+id/map_data_lon"
                app:layout_constraintStart_toStartOf="@+id/map_data_alt" />

            <TextView
                android:id="@+id/map_data_vel"
                style="@style/text_osnovnie_danie_na_svetlom_fone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fm_speed_default"
                app:layout_constraintBottom_toTopOf="@+id/divider_vertical"
                app:layout_constraintStart_toStartOf="@+id/map_data_lon" />

            <ImageButton
                android:id="@+id/map_btn_next"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider_vertical"
                tools:ignore="ContentDescription,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/map_btn_back"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider_vertical"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <View
                android:id="@+id/divider_horizontal"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/heavy_clouds"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/map_btn_back" />

            <View
                android:id="@+id/divider_vertical"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/heavy_clouds"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/map_btn_next" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginVertical="2dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/map_data_name"
                app:layout_constraintStart_toStartOf="@+id/map_data_name"
                app:layout_constraintTop_toTopOf="@+id/map_data_name"
                app:srcCompat="@drawable/ic_search"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>