<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/progress_orbita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_navigation_back" />

    <TextView
        android:id="@+id/tv_sputnik_nazvanie"
        style="@style/text_zagolovok_big_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progress_orbita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ISS" />

    <developer.mihailzharkovskiy.sputniki_v_kosmose.app.presentation.common.customView.ProgressOrbita
        android:id="@+id/progress_orbita"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_0"
        style="@style/text_osnovnie_danie_na_temnom_fone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/heavy_clouds"
        android:gravity="center"
        android:text="@string/dsf_azimuth_prosto"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_sputnik_azimut_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sputnik_azimut_start"
        style="@style/text_osnovnie_danie_na_temnom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_orbita"
        tools:text="start: 47°" />

    <TextView
        android:id="@+id/tv_sputnik_azimut_end"
        style="@style/text_osnovnie_danie_na_temnom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_0"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="end: 247°" />

    <TextView
        android:id="@+id/tv_1"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/dsf_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_0" />

    <TextView
        android:id="@+id/tv_2"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/dsf_range"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_1" />

    <TextView
        android:id="@+id/tv_3"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/dsf_altitude"
        app:layout_constraintStart_toStartOf="@+id/tv_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_2" />

    <TextView
        android:id="@+id/tv_4"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/dsf_elevation"
        app:layout_constraintStart_toStartOf="@+id/tv_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_3" />

    <TextView
        android:id="@+id/tv_5"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/dsf_azimut_tekushiy"
        app:layout_constraintStart_toStartOf="@+id/tv_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_4" />

    <TextView
        android:id="@+id/tv_sputnik_skorost"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="4548км/ч" />

    <TextView
        android:id="@+id/tv_sputnik_udalenie_ot_user"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="246 км" />

    <TextView
        android:id="@+id/tv_sputnik_visota"
        style="@style/text_osnovnie_danie_na_svetlom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_3"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="457 км" />

    <TextView
        android:id="@+id/tv_sputnik_elevation"
        style="@style/text_osnovnie_danie_na_temnom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_dark_radius"
        android:paddingHorizontal="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_4"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="117.0°" />

    <TextView
        android:id="@+id/tv_sputnik_azimut_curation"
        style="@style/text_osnovnie_danie_na_temnom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_dark_radius"
        android:paddingHorizontal="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_5"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="117.4°(ЮЗ)" />

    <TextView
        android:id="@+id/tv_kompas_azimut"
        style="@style/text_osnovnie_danie_na_temnom_fone"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/background_compas"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/cardView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_5"
        tools:text="азимут: 236°(ЮЗ)" />

    <ImageView
        android:id="@+id/iv_kompas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_kompas_azimut"
        app:layout_constraintStart_toStartOf="@+id/tv_kompas_azimut"
        app:layout_constraintTop_toTopOf="@+id/tv_kompas_azimut"
        app:srcCompat="@drawable/ic_navigation" />

    <View
        android:id="@+id/view_kompas_obvod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/compas_ring_big"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_kompas_azimut"
        app:layout_constraintEnd_toEndOf="@+id/tv_kompas_azimut"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/tv_kompas_azimut"
        app:layout_constraintTop_toTopOf="@+id/tv_kompas_azimut"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_with_radius_and_obvodka"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/btn_posmotret_na_karte"
                style="@style/text_osnovnie_danie_na_svetlom_fone"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dsf_button_na_karte" />

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="@dimen/button_height"
                android:background="@color/heavy_clouds"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_inform_o_sptnike"
                style="@style/text_osnovnie_danie_na_svetlom_fone"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/dsf_button_na_o_sputnike" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_satellite_invisible"
        style="@style/text_osnovnie_danie_na_temnom_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dark_radius"
        android:text="@string/dsf_satellite_invisible"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progress_orbita"
        app:layout_constraintTop_toBottomOf="@+id/tv_sputnik_nazvanie" />

</androidx.constraintlayout.widget.ConstraintLayout>






